--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,6 @@
        
     </head>
     <body>
-       <div>Hello Chennai Bike Bazaar</div>
+       <div>Hello Talent box Node app </div>
     </body>
 </html>
